--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -949,3 +949,112 @@
   langid = {english},
   file = {/Users/dmpowell/Documents/Papers/Williamson - Bayesian Networks for Logical Reasoning 2.pdf}
 }
+
+
+@article{cook.lewandowsky2016,
+  title = {Rational {{Irrationality}}: {{Modeling Climate Change Belief Polarization Using Bayesian Networks}}},
+  shorttitle = {Rational {{Irrationality}}},
+  author = {Cook, John and Lewandowsky, Stephan},
+  year = {2016},
+  month = jan,
+  journal = {Topics in Cognitive Science},
+  volume = {8},
+  number = {1},
+  pages = {160--179},
+  issn = {17568757},
+  doi = {10.1111/tops.12186},
+  abstract = {Belief polarization is said to occur when two people respond to the same evidence by updating their beliefs in opposite directions. This response is considered to be ``irrational'' because it involves contrary updating, a form of belief updating that appears to violate normatively optimal responding, as for example dictated by Bayes' theorem. In light of much evidence that people are capable of normatively optimal behavior, belief polarization presents a puzzling exception. We show that Bayesian networks, or Bayes nets, can simulate rational belief updating. When fit to experimental data, Bayes nets can help identify the factors that contribute to polarization. We present a study into belief updating concerning the reality of climate change in response to information about the scientific consensus on anthropogenic global warming (AGW). The study used representative samples of Australian and U.S. participants. Among Australians, consensus information partially neutralized the influence of worldview, with free-market supporters showing a greater increase in acceptance of human-caused global warming relative to free-market opponents. In contrast, while consensus information overall had a positive effect on perceived consensus among U.S. participants, there was a reduction in perceived consensus and acceptance of humancaused global warming for strong supporters of unregulated free markets. Fitting a Bayes net model to the data indicated that under a Bayesian framework, free-market support is a significant driver of beliefs about climate change and trust in climate scientists. Further, active distrust of climate scientists among a small number of U.S. conservatives drives contrary updating in response to consensus information among this particular group.},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/XJER6NIG/Cook and Lewandowsky - 2016 - Rational Irrationality Modeling Climate Change Be.pdf}
+}
+
+@article{holyoak.powell2016,
+  title = {Deontological Coherence: {{A}} Framework for Commonsense Moral Reasoning.},
+  shorttitle = {Deontological Coherence},
+  author = {Holyoak, Keith J. and Powell, Derek},
+  year = {2016},
+  month = nov,
+  journal = {Psychological Bulletin},
+  volume = {142},
+  number = {11},
+  pages = {1179--1203},
+  issn = {1939-1455, 0033-2909},
+  doi = {10.1037/bul0000075},
+  copyright = {All rights reserved},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/W7JRT6CV/Holyoak and Powell - 2016 - Deontological coherence A framework for commonsen.pdf}
+}
+
+@article{holyoak.simon1999,
+  title = {Bidirectional {{Reasoning}} in {{Decision Making}} by {{Constraint Satisfaction}}},
+  author = {Holyoak, Keith J and Simon, Dan},
+  year = {1999},
+  journal = {Journal of Experimental Psychology: General},
+  pages = {29},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/PMM8PH6W/Holyoak and Simon - Bidirectional Reasoning in Decision Making by Cons.pdf}
+}
+
+@article{hornsey.etal2018,
+  title = {The Psychological Roots of Anti-Vaccination Attitudes: {{A}} 24-Nation Investigation.},
+  shorttitle = {The Psychological Roots of Anti-Vaccination Attitudes},
+  author = {Hornsey, Matthew J. and Harris, Emily A. and Fielding, Kelly S.},
+  year = {2018},
+  month = apr,
+  journal = {Health Psychology},
+  volume = {37},
+  number = {4},
+  pages = {307--315},
+  issn = {1930-7810, 0278-6133},
+  doi = {10.1037/hea0000586},
+  abstract = {Objective: Strengthening of antivaccination movements in recent decades has coincided with unprecedented increases in the incidence of some communicable diseases. Many intervention programs work from a deficit model of science communication, presuming that vaccination skeptics lack the ability to access or understand evidence. However, interventions focusing on evidence and the debunking of vaccine-related myths have proven to be either nonproductive or counterproductive. Working from a motivated reasoning perspective, we examine the psychological factors that might motivate people to reject scientific consensus around vaccination. To assist with international generalizability, we examine this question in 24 countries. Methods: We sampled 5,323 participants in 24 countries, and measured their antivaccination attitudes. We also measured their belief in conspiracy theories, reactance (the tendency for people to have a low tolerance for impingements on their freedoms), disgust sensitivity toward blood and needles, and individualistic/hierarchical worldviews (i.e., people's beliefs about how much control society should have over individuals, and whether hierarchies are desirable). Results: In order of magnitude, antivaccination attitudes were highest among those who (a) were high in conspiratorial thinking, (b) were high in reactance, (c) reported high levels of disgust toward blood and needles, and (d) had strong individualistic/hierarchical worldviews. In contrast, demographic variables (including education) accounted for nonsignificant or trivial levels of variance. Conclusions: These data help identify the ``attitude roots'' that may motivate and sustain vaccine skepticism. In so doing, they help shed light on why repetition of evidence can be nonproductive, and suggest communication solutions to that problem.},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/DDUI4KDP/Hornsey et al. - 2018 - The psychological roots of anti-vaccination attitu 3.pdf}
+}
+
+@article{simon.etal2004,
+  title = {The {{Redux}} of {{Cognitive Consistency Theories}}: {{Evidence Judgments}} by {{Constraint Satisfaction}}.},
+  shorttitle = {The {{Redux}} of {{Cognitive Consistency Theories}}},
+  author = {Simon, Dan and Snow, Chadwick J. and Read, Stephen J.},
+  year = {2004},
+  journal = {Journal of Personality and Social Psychology},
+  volume = {86},
+  number = {6},
+  pages = {814--837},
+  issn = {1939-1315, 0022-3514},
+  doi = {10.1037/0022-3514.86.6.814},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/AZR3YHPB/Simon et al. - 2004 - The Redux of Cognitive Consistency Theories Evide.pdf}
+}
+
+@article{spellman.etal1993,
+  title = {A {{Coherence Model}} of {{Cognitive Consistency}}: {{Dynamics}} of {{Attitude Change During}} the {{Persian Gulf War}}},
+  shorttitle = {A {{Coherence Model}} of {{Cognitive Consistency}}},
+  author = {Spellman, Barbara A. and Ullman, Jodie B. and Holyoak, Keith J.},
+  year = {1993},
+  month = jan,
+  journal = {Journal of Social Issues},
+  volume = {49},
+  number = {4},
+  pages = {147--165},
+  issn = {00224537, 15404560},
+  doi = {10.1111/j.1540-4560.1993.tb01185.x},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/3URJABS7/Spellman, Ullman, Holyoak - 1993 - A Coherence Model of Cognitive Consistency Dynamics of Attitude Change During the Persian Gulf War.pdf}
+}
+
+@article{thagard1989,
+  title = {Explanatory Coherence},
+  author = {Thagard, Paul},
+  year = {1989},
+  month = sep,
+  journal = {Behavioral and Brain Sciences},
+  volume = {12},
+  number = {3},
+  pages = {435--467},
+  issn = {0140-525X, 1469-1825},
+  doi = {10.1017/S0140525X00057046},
+  abstract = {Abstract             This target article presents a new computational theory of explanatory coherence that applies to the acceptance and rejection of scientific hypotheses as well as to reasoning in everyday life. The theory consists of seven principles that establish relations of local coherence between a hypothesis and other propositions. A hypothesis coheres with propositions that it explains, or that explain it, or that participate with it in explaining other propositions, or that offer analogous explanations. Propositions are incoherent with each other if they are contradictory. Propositions that describe the results of observation have a degree of acceptability on their own. An explanatory hypothesis is accepted if it coheres better overall than its competitors. The power of the seven principles is shown by their implementation in a connectionist program called ECHO, which treats hypothesis evaluation as a constraint satisfaction problem. Inputs about the explanatory relations are used to create a network of units representing propositions, while coherence and incoherence relations are encoded by excitatory and inhibitory links. ECHO provides an algorithm for smoothly integrating theory evaluation based on considerations of explanatory breadth, simplicity, and analogy. It has been applied to such important scientific cases as Lavoisier's argument for oxygen against the phlogiston theory and Darwin's argument for evolution against creationism, and also to cases of legal reasoning. The theory of explanatory coherence has implications for artificial intelligence, psychology, and philosophy.},
+  langid = {english},
+  file = {/Users/dmpowell/Zotero/storage/LVY6HCIY/Thagard - 1989 - Explanatory Coherence.pdf}
+}
