updated osf link

--- a/paper/paper-papaja.Rmd
+++ b/paper/paper-papaja.Rmd
@@ -44,7 +44,7 @@ affiliation:
    
   
 authornote: |
-  Supplementary Materials, including all data and analysis code for this project are available at https://osf.io/sdfpj/. Preregistration information for Studies 3a and 3b is available at https://osf.io/csnez/registrations. Earlier modeling and analyses of data from Study 1 were presented at the 40th Annual Conference of the Cognitive Science Society. A six-page paper also appeared in the proceedings [@powell.etal2018]. 
+  Supplementary Materials, including all data and analysis code for this project are available at https://osf.io/sdfpj/. Preregistration information for Studies 3a and 3b is available at https://osf.io/uemq4. Earlier modeling and analyses of data from Study 1 were presented at the 40th Annual Conference of the Cognitive Science Society. A six-page paper also appeared in the proceedings [@powell.etal2018]. 
 
 abstract: |
   Much of the richness of human thought is supported by people’s intuitive theories---mental frameworks capturing the perceived structure of the world. But intuitive theories can also contain and reinforce dangerous misconceptions. In this paper, we take up the case of misconceptions about vaccine safety that discourage vaccination. These misconceptions constitute a major public health risk that predates the coronavirus pandemic but that has become all the more dire in recent years. We argue that addressing such misconceptions requires awareness of the broader conceptual contexts in which they are embedded. To build this understanding, we examined the structure and revision of people’s intuitive theories of vaccination in five large survey studies (total _N_ = 3196). Based on these data, we present a cognitive model of the intuitive theory surrounding people’s decisions about whether to vaccinate young children against diseases like measles, mumps, and rubella (MMR). Using this model, we were able to make accurate predictions about how people’s beliefs would be revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events (the measles outbreaks of 2019). In addition to presenting a promising way forward for promoting the MMR vaccine, this approach has clear implications for encouraging the uptake of COVID-19 vaccines, especially among parents of young children. At the same time, this work provides the foundation for richer understandings of intuitive theories and belief revision more broadly.
